# PlaceHome

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  PLACENET.md  mosquitto.conf  placenet_ca.db
migrations/: 0001_ca_keys.sql  0002_device_certs.sql  0003_node_identity.sql
src/: app.rs  config.rs  database.rs  lib.rs  main.rs  models.rs  mosquitto.rs  routes.rs  services.rs  supervisor.rs
src/infra/ca/: ca_service.rs  manager.rs  mod.rs  operations.rs
src/rendering/: mod.rs  startup_screen.rs
src/services/: capabilities.rs  mod.rs  mosquitto.rs  mosquitto_brokerage_mngmt.rs  mosquitto_client.rs  mqtt_manager.rs
src/services/ca/: manager.rs  mod.rs  operations.rs
src/services/cloud_gateway/: cloud_gateway_service.rs  manager.rs  messages.rs  mod.rs
src/services/gateway/: handlers.rs  handshake.rs  manager.rs  mod.rs  proxy.rs  response.rs
src/services/http/: handshake.rs  manager.rs  mod.rs  routes.rs
src/services/local_gateway/: gateway_service.rs  handlers.rs  handshake.rs  manager.rs  mod.rs  proxy.rs  requests.rs
src/services/mqtt_brokerage/: manager.rs  mod.rs  mosquitto_brokerage_service.rs
src/services/mqtt_client/: manager.rs  mod.rs  mqtt_client_service.rs
src/services/peer/: mod.rs  peer_service.rs
static/: index.html
tests/: ca_operations.rs  ca_service.rs  capabilities.rs  config.rs  handshake.rs  supervisor.rs
tests/common/: mod.rs
