[package]
name = "placenet-home"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rumqttc = "0.24"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2"
async-trait = "0.1"
bytes = "1"
ratatui = "0.29"
crossterm = "0.28"
