[package]
name = "placenet-home"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rumqttc = { version = "0.25.1", features = ["use-rustls-no-provider"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2"
async-trait = "0.1"
bytes = "1"
axum = { version = "0.8.8", features = ["http1", "json"] }
serde_json = "1.0"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = "0.5"
tower-http = { version = "0.6.8", features = ["fs"] }
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
rustls-pemfile = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
uuid = { version = "1", features = ["v4"] }
